Mejoras Carlos enero-2022